# ztans

./: .gitignore  AUTHORS  ChangeLog  HISTORY  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  gtans.desktop  gtanshelpcs.txt  gtanshelpes.txt  gtanshelpfr.txt  gtansrc.def  makefile
data/: Makefile.am  gtanshelp.txt  gtanshelppl.txt  gtanshelpru.txt  gtanshelpuk.txt  gtansrc.in  ztansrc
data/icons/: Makefile.am
doc/: Makefile.am
misc/: Makefile  gtans-6x  gtans.desktop
po/: LINGUAS  Makefile  POTFILES.in  cs.po  es.po  gtans.po  gtans.po-fr  gtans.po-pl  gtans.po-ru  gtans.po-uk  list  refresh_gtans.po.sh  tr.po
src/: Makefile.am  callbacks.c  callbacks.h  compatibility.h  interface.c  interface.h  main.c  main.h  support.c  support.h
